--- a/Module 1/Lesson 02-Building_Applications_Powered_by_LLMs_with_LangChain.ipynb
+++ b/Module 1/Lesson 02-Building_Applications_Powered_by_LLMs_with_LangChain.ipynb
@@ -12,7 +12,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 3,
       "metadata": {
         "dotnet_interactive": {
           "language": "csharp"
@@ -90,7 +90,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 6,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -100,22 +100,20 @@
       },
       "outputs": [
         {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "\u001b[33mWARNING: Retrying (Retry(total=4, connect=None, read=None, redirect=None, status=None)) after connection broken by 'NewConnectionError('<pip._vendor.urllib3.connection.HTTPSConnection object at 0x1052222d0>: Failed to establish a new connection: [Errno 8] nodename nor servname provided, or not known')': /simple/python-dotenv/\u001b[0m\u001b[33m\n",
-            "\u001b[0m\u001b[33mWARNING: Retrying (Retry(total=3, connect=None, read=None, redirect=None, status=None)) after connection broken by 'NewConnectionError('<pip._vendor.urllib3.connection.HTTPSConnection object at 0x10520ba90>: Failed to establish a new connection: [Errno 8] nodename nor servname provided, or not known')': /simple/python-dotenv/\u001b[0m\u001b[33m\n",
-            "\u001b[0m\u001b[33mWARNING: Retrying (Retry(total=2, connect=None, read=None, redirect=None, status=None)) after connection broken by 'NewConnectionError('<pip._vendor.urllib3.connection.HTTPSConnection object at 0x105222e10>: Failed to establish a new connection: [Errno 8] nodename nor servname provided, or not known')': /simple/python-dotenv/\u001b[0m\u001b[33m\n",
-            "\u001b[0m\u001b[33mWARNING: Retrying (Retry(total=1, connect=None, read=None, redirect=None, status=None)) after connection broken by 'NewConnectionError('<pip._vendor.urllib3.connection.HTTPSConnection object at 0x105223710>: Failed to establish a new connection: [Errno 8] nodename nor servname provided, or not known')': /simple/python-dotenv/\u001b[0m\u001b[33m\n",
-            "\u001b[0m\u001b[33mWARNING: Retrying (Retry(total=0, connect=None, read=None, redirect=None, status=None)) after connection broken by 'NewConnectionError('<pip._vendor.urllib3.connection.HTTPSConnection object at 0x105223fd0>: Failed to establish a new connection: [Errno 8] nodename nor servname provided, or not known')': /simple/python-dotenv/\u001b[0m\u001b[33m\n",
-            "\u001b[0m\u001b[31mERROR: Could not find a version that satisfies the requirement python-dotenv (from versions: none)\u001b[0m\u001b[31m\n",
-            "\u001b[0m\u001b[31mERROR: No matching distribution found for python-dotenv\u001b[0m\u001b[31m\n",
-            "\u001b[0m"
+          "ename": "SyntaxError",
+          "evalue": "invalid syntax (1692884843.py, line 5)",
+          "output_type": "error",
+          "traceback": [
+            "\u001b[0;36m  Cell \u001b[0;32mIn[6], line 5\u001b[0;36m\u001b[0m\n\u001b[0;31m    pip install langchain==0.0.208 deeplake openai tiktoken\u001b[0m\n\u001b[0m        ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
           ]
         }
       ],
       "source": [
-        "pip3 install langchain==0.0.208 deeplake openai tiktoken"
+        "import langchain\n",
+        "import tiktoken\n",
+        "\n",
+        "\n",
+        "pip install langchain==0.0.208 deeplake openai tiktoken"
       ]
     },
     {
@@ -340,8 +338,9 @@
       "provenance": []
     },
     "kernelspec": {
-      "display_name": "Python 3",
-      "name": "python3"
+      "display_name": ".NET (C#)",
+      "language": "C#",
+      "name": ".net-csharp"
     },
     "language_info": {
       "codemirror_mode": {
@@ -354,6 +353,17 @@
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
       "version": "3.11.3"
+    },
+    "polyglot_notebook": {
+      "kernelInfo": {
+        "defaultKernelName": "csharp",
+        "items": [
+          {
+            "aliases": [],
+            "name": "csharp"
+          }
+        ]
+      }
     }
   },
   "nbformat": 4,
