added git ignore and .env

--- a/Module 1/Lesson 02-Building_Applications_Powered_by_LLMs_with_LangChain.ipynb
+++ b/Module 1/Lesson 02-Building_Applications_Powered_by_LLMs_with_LangChain.ipynb
@@ -12,102 +12,50 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": 6,
       "metadata": {
         "dotnet_interactive": {
           "language": "csharp"
         },
         "polyglot_notebook": {
           "kernelName": "csharp"
+        },
+        "vscode": {
+          "languageId": "polyglot-notebook"
         }
       },
       "outputs": [
         {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "Requirement already satisfied: langchain==0.0.208 in /Library/Frameworks/Python.framework/Versions/3.11/lib/python3.11/site-packages (0.0.208)\n",
-            "Requirement already satisfied: deeplake in /Library/Frameworks/Python.framework/Versions/3.11/lib/python3.11/site-packages (3.6.25)\n",
-            "Requirement already satisfied: openai in /Library/Frameworks/Python.framework/Versions/3.11/lib/python3.11/site-packages (0.28.0)\n",
-            "Requirement already satisfied: tiktoken in /Library/Frameworks/Python.framework/Versions/3.11/lib/python3.11/site-packages (0.4.0)\n",
-            "Requirement already satisfied: PyYAML>=5.4.1 in /Library/Frameworks/Python.framework/Versions/3.11/lib/python3.11/site-packages (from langchain==0.0.208) (6.0.1)\n",
-            "Requirement already satisfied: SQLAlchemy<3,>=1.4 in /Library/Frameworks/Python.framework/Versions/3.11/lib/python3.11/site-packages (from langchain==0.0.208) (2.0.20)\n",
-            "Requirement already satisfied: aiohttp<4.0.0,>=3.8.3 in /Library/Frameworks/Python.framework/Versions/3.11/lib/python3.11/site-packages (from langchain==0.0.208) (3.8.5)\n",
-            "Requirement already satisfied: dataclasses-json<0.6.0,>=0.5.7 in /Library/Frameworks/Python.framework/Versions/3.11/lib/python3.11/site-packages (from langchain==0.0.208) (0.5.14)\n",
-            "Requirement already satisfied: langchainplus-sdk>=0.0.13 in /Library/Frameworks/Python.framework/Versions/3.11/lib/python3.11/site-packages (from langchain==0.0.208) (0.0.20)\n",
-            "Requirement already satisfied: numexpr<3.0.0,>=2.8.4 in /Library/Frameworks/Python.framework/Versions/3.11/lib/python3.11/site-packages (from langchain==0.0.208) (2.8.5)\n",
-            "Requirement already satisfied: numpy<2,>=1 in /Library/Frameworks/Python.framework/Versions/3.11/lib/python3.11/site-packages (from langchain==0.0.208) (1.24.3)\n",
-            "Requirement already satisfied: openapi-schema-pydantic<2.0,>=1.2 in /Library/Frameworks/Python.framework/Versions/3.11/lib/python3.11/site-packages (from langchain==0.0.208) (1.2.4)\n",
-            "Requirement already satisfied: pydantic<2,>=1 in /Library/Frameworks/Python.framework/Versions/3.11/lib/python3.11/site-packages (from langchain==0.0.208) (1.10.12)\n",
-            "Requirement already satisfied: requests<3,>=2 in /Users/anasdarwish/Library/Python/3.11/lib/python/site-packages (from langchain==0.0.208) (2.31.0)\n",
-            "Requirement already satisfied: tenacity<9.0.0,>=8.1.0 in /Library/Frameworks/Python.framework/Versions/3.11/lib/python3.11/site-packages (from langchain==0.0.208) (8.2.3)\n",
-            "Requirement already satisfied: pillow in /Library/Frameworks/Python.framework/Versions/3.11/lib/python3.11/site-packages (from deeplake) (10.0.0)\n",
-            "Requirement already satisfied: boto3 in /Library/Frameworks/Python.framework/Versions/3.11/lib/python3.11/site-packages (from deeplake) (1.28.17)\n",
-            "Requirement already satisfied: click in /Library/Frameworks/Python.framework/Versions/3.11/lib/python3.11/site-packages (from deeplake) (8.1.7)\n",
-            "Requirement already satisfied: pathos in /Library/Frameworks/Python.framework/Versions/3.11/lib/python3.11/site-packages (from deeplake) (0.3.1)\n",
-            "Requirement already satisfied: humbug>=0.3.1 in /Library/Frameworks/Python.framework/Versions/3.11/lib/python3.11/site-packages (from deeplake) (0.3.2)\n",
-            "Requirement already satisfied: tqdm in /Library/Frameworks/Python.framework/Versions/3.11/lib/python3.11/site-packages (from deeplake) (4.66.1)\n",
-            "Requirement already satisfied: numcodecs in /Library/Frameworks/Python.framework/Versions/3.11/lib/python3.11/site-packages (from deeplake) (0.11.0)\n",
-            "Requirement already satisfied: pyjwt in /Library/Frameworks/Python.framework/Versions/3.11/lib/python3.11/site-packages (from deeplake) (2.8.0)\n",
-            "Requirement already satisfied: aioboto3>=10.4.0 in /Library/Frameworks/Python.framework/Versions/3.11/lib/python3.11/site-packages (from deeplake) (11.3.0)\n",
-            "Requirement already satisfied: nest-asyncio in /Library/Frameworks/Python.framework/Versions/3.11/lib/python3.11/site-packages (from deeplake) (1.5.7)\n",
-            "Requirement already satisfied: regex>=2022.1.18 in /Library/Frameworks/Python.framework/Versions/3.11/lib/python3.11/site-packages (from tiktoken) (2023.8.8)\n",
-            "Requirement already satisfied: aiobotocore[boto3]==2.6.0 in /Library/Frameworks/Python.framework/Versions/3.11/lib/python3.11/site-packages (from aioboto3>=10.4.0->deeplake) (2.6.0)\n",
-            "Requirement already satisfied: botocore<1.31.18,>=1.31.17 in /Library/Frameworks/Python.framework/Versions/3.11/lib/python3.11/site-packages (from aiobotocore[boto3]==2.6.0->aioboto3>=10.4.0->deeplake) (1.31.17)\n",
-            "Requirement already satisfied: wrapt<2.0.0,>=1.10.10 in /Library/Frameworks/Python.framework/Versions/3.11/lib/python3.11/site-packages (from aiobotocore[boto3]==2.6.0->aioboto3>=10.4.0->deeplake) (1.15.0)\n",
-            "Requirement already satisfied: aioitertools<1.0.0,>=0.5.1 in /Library/Frameworks/Python.framework/Versions/3.11/lib/python3.11/site-packages (from aiobotocore[boto3]==2.6.0->aioboto3>=10.4.0->deeplake) (0.11.0)\n",
-            "Requirement already satisfied: attrs>=17.3.0 in /Library/Frameworks/Python.framework/Versions/3.11/lib/python3.11/site-packages (from aiohttp<4.0.0,>=3.8.3->langchain==0.0.208) (23.1.0)\n",
-            "Requirement already satisfied: charset-normalizer<4.0,>=2.0 in /Users/anasdarwish/Library/Python/3.11/lib/python/site-packages (from aiohttp<4.0.0,>=3.8.3->langchain==0.0.208) (3.2.0)\n",
-            "Requirement already satisfied: multidict<7.0,>=4.5 in /Library/Frameworks/Python.framework/Versions/3.11/lib/python3.11/site-packages (from aiohttp<4.0.0,>=3.8.3->langchain==0.0.208) (6.0.4)\n",
-            "Requirement already satisfied: async-timeout<5.0,>=4.0.0a3 in /Library/Frameworks/Python.framework/Versions/3.11/lib/python3.11/site-packages (from aiohttp<4.0.0,>=3.8.3->langchain==0.0.208) (4.0.3)\n",
-            "Requirement already satisfied: yarl<2.0,>=1.0 in /Library/Frameworks/Python.framework/Versions/3.11/lib/python3.11/site-packages (from aiohttp<4.0.0,>=3.8.3->langchain==0.0.208) (1.9.2)\n",
-            "Requirement already satisfied: frozenlist>=1.1.1 in /Library/Frameworks/Python.framework/Versions/3.11/lib/python3.11/site-packages (from aiohttp<4.0.0,>=3.8.3->langchain==0.0.208) (1.4.0)\n",
-            "Requirement already satisfied: aiosignal>=1.1.2 in /Library/Frameworks/Python.framework/Versions/3.11/lib/python3.11/site-packages (from aiohttp<4.0.0,>=3.8.3->langchain==0.0.208) (1.3.1)\n",
-            "Requirement already satisfied: jmespath<2.0.0,>=0.7.1 in /Library/Frameworks/Python.framework/Versions/3.11/lib/python3.11/site-packages (from boto3->deeplake) (1.0.1)\n",
-            "Requirement already satisfied: s3transfer<0.7.0,>=0.6.0 in /Library/Frameworks/Python.framework/Versions/3.11/lib/python3.11/site-packages (from boto3->deeplake) (0.6.2)\n",
-            "Requirement already satisfied: marshmallow<4.0.0,>=3.18.0 in /Library/Frameworks/Python.framework/Versions/3.11/lib/python3.11/site-packages (from dataclasses-json<0.6.0,>=0.5.7->langchain==0.0.208) (3.20.1)\n",
-            "Requirement already satisfied: typing-inspect<1,>=0.4.0 in /Library/Frameworks/Python.framework/Versions/3.11/lib/python3.11/site-packages (from dataclasses-json<0.6.0,>=0.5.7->langchain==0.0.208) (0.9.0)\n",
-            "Requirement already satisfied: typing-extensions>=4.2.0 in /Library/Frameworks/Python.framework/Versions/3.11/lib/python3.11/site-packages (from pydantic<2,>=1->langchain==0.0.208) (4.5.0)\n",
-            "Requirement already satisfied: idna<4,>=2.5 in /Users/anasdarwish/Library/Python/3.11/lib/python/site-packages (from requests<3,>=2->langchain==0.0.208) (3.4)\n",
-            "Requirement already satisfied: urllib3<3,>=1.21.1 in /Library/Frameworks/Python.framework/Versions/3.11/lib/python3.11/site-packages (from requests<3,>=2->langchain==0.0.208) (1.26.16)\n",
-            "Requirement already satisfied: certifi>=2017.4.17 in /Users/anasdarwish/Library/Python/3.11/lib/python/site-packages (from requests<3,>=2->langchain==0.0.208) (2023.7.22)\n",
-            "Requirement already satisfied: greenlet!=0.4.17 in /Library/Frameworks/Python.framework/Versions/3.11/lib/python3.11/site-packages (from SQLAlchemy<3,>=1.4->langchain==0.0.208) (2.0.2)\n",
-            "Requirement already satisfied: entrypoints in /Library/Frameworks/Python.framework/Versions/3.11/lib/python3.11/site-packages (from numcodecs->deeplake) (0.4)\n",
-            "Requirement already satisfied: ppft>=1.7.6.7 in /Library/Frameworks/Python.framework/Versions/3.11/lib/python3.11/site-packages (from pathos->deeplake) (1.7.6.7)\n",
-            "Requirement already satisfied: dill>=0.3.7 in /Library/Frameworks/Python.framework/Versions/3.11/lib/python3.11/site-packages (from pathos->deeplake) (0.3.7)\n",
-            "Requirement already satisfied: pox>=0.3.3 in /Library/Frameworks/Python.framework/Versions/3.11/lib/python3.11/site-packages (from pathos->deeplake) (0.3.3)\n",
-            "Requirement already satisfied: multiprocess>=0.70.15 in /Library/Frameworks/Python.framework/Versions/3.11/lib/python3.11/site-packages (from pathos->deeplake) (0.70.15)\n",
-            "Requirement already satisfied: python-dateutil<3.0.0,>=2.1 in /Library/Frameworks/Python.framework/Versions/3.11/lib/python3.11/site-packages (from botocore<1.31.18,>=1.31.17->aiobotocore[boto3]==2.6.0->aioboto3>=10.4.0->deeplake) (2.8.2)\n",
-            "Requirement already satisfied: packaging>=17.0 in /Library/Frameworks/Python.framework/Versions/3.11/lib/python3.11/site-packages (from marshmallow<4.0.0,>=3.18.0->dataclasses-json<0.6.0,>=0.5.7->langchain==0.0.208) (23.1)\n",
-            "Requirement already satisfied: mypy-extensions>=0.3.0 in /Library/Frameworks/Python.framework/Versions/3.11/lib/python3.11/site-packages (from typing-inspect<1,>=0.4.0->dataclasses-json<0.6.0,>=0.5.7->langchain==0.0.208) (1.0.0)\n",
-            "Requirement already satisfied: six>=1.5 in /Library/Frameworks/Python.framework/Versions/3.11/lib/python3.11/site-packages (from python-dateutil<3.0.0,>=2.1->botocore<1.31.18,>=1.31.17->aiobotocore[boto3]==2.6.0->aioboto3>=10.4.0->deeplake) (1.16.0)\n"
+          "ename": "Error",
+          "evalue": "(1,14): error CS1002: ; expected\n(1,28): error CS1002: ; expected\n(1,33): error CS1002: ; expected\n(1,49): error CS1002: ; expected",
+          "output_type": "error",
+          "traceback": [
+            "(1,14): error CS1002: ; expected\n",
+            "(1,28): error CS1002: ; expected\n",
+            "(1,33): error CS1002: ; expected\n",
+            "(1,49): error CS1002: ; expected"
           ]
         }
       ],
       "source": [
-        "!pip3 install langchain==0.0.208 deeplake openai tiktoken"
+        "pip3 install langchain==0.0.208 deeplake openai tiktoken"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": null,
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
+        "dotnet_interactive": {
+          "language": "csharp"
         },
-        "id": "LNoTP56OxHgr",
-        "outputId": "d969c817-dd53-46dd-9994-8bbd805215ff"
-      },
-      "outputs": [
-        {
-          "ename": "SyntaxError",
-          "evalue": "invalid syntax (1692884843.py, line 5)",
-          "output_type": "error",
-          "traceback": [
-            "\u001b[0;36m  Cell \u001b[0;32mIn[6], line 5\u001b[0;36m\u001b[0m\n\u001b[0;31m    pip install langchain==0.0.208 deeplake openai tiktoken\u001b[0m\n\u001b[0m        ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
-          ]
+        "polyglot_notebook": {
+          "kernelName": "csharp"
+        },
+        "vscode": {
+          "languageId": "polyglot-notebook"
         }
-      ],
+      },
+      "outputs": [],
       "source": [
         "import langchain\n",
         "import tiktoken\n",
@@ -120,27 +68,17 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
+        "dotnet_interactive": {
+          "language": "csharp"
         },
-        "id": "Kbp_3cG1xLZF",
-        "outputId": "dcfdaac8-645d-4815-e6a5-b0d48a35c001"
-      },
-      "outputs": [
-        {
-          "ename": "Error",
-          "evalue": "(1,20): error CS1003: Syntax error, 'in' expected\n(3,2): error CS0742: A query body must end with a select clause or a group clause\n(3,2): error CS1002: ; expected\n(3,7): error CS1002: ; expected\n(3,45): error CS1525: Invalid expression term '.'\n(3,49): error CS1002: ; expected",
-          "output_type": "error",
-          "traceback": [
-            "(1,20): error CS1003: Syntax error, 'in' expected\n",
-            "(3,2): error CS0742: A query body must end with a select clause or a group clause\n",
-            "(3,2): error CS1002: ; expected\n",
-            "(3,7): error CS1002: ; expected\n",
-            "(3,45): error CS1525: Invalid expression term '.'\n",
-            "(3,49): error CS1002: ; expected"
-          ]
+        "polyglot_notebook": {
+          "kernelName": "csharp"
+        },
+        "vscode": {
+          "languageId": "polyglot-notebook"
         }
-      ],
+      },
+      "outputs": [],
       "source": [
         "from dotenv import load_dotenv\n",
         "\n",
@@ -153,11 +91,15 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
+        "dotnet_interactive": {
+          "language": "csharp"
         },
-        "id": "B9hBmX2axisi",
-        "outputId": "32a65c65-b566-49df-f7f6-ae7ead045020"
+        "polyglot_notebook": {
+          "kernelName": "csharp"
+        },
+        "vscode": {
+          "languageId": "polyglot-notebook"
+        }
       },
       "outputs": [],
       "source": [
@@ -195,7 +137,15 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "8Aq0Gw1Ux5E5"
+        "dotnet_interactive": {
+          "language": "csharp"
+        },
+        "polyglot_notebook": {
+          "kernelName": "csharp"
+        },
+        "vscode": {
+          "languageId": "polyglot-notebook"
+        }
       },
       "outputs": [],
       "source": [
@@ -209,7 +159,15 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "yUPse02KydnP"
+        "dotnet_interactive": {
+          "language": "csharp"
+        },
+        "polyglot_notebook": {
+          "kernelName": "csharp"
+        },
+        "vscode": {
+          "languageId": "polyglot-notebook"
+        }
       },
       "outputs": [],
       "source": [
@@ -221,7 +179,15 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "CFNqeufiyj7a"
+        "dotnet_interactive": {
+          "language": "csharp"
+        },
+        "polyglot_notebook": {
+          "kernelName": "csharp"
+        },
+        "vscode": {
+          "languageId": "polyglot-notebook"
+        }
       },
       "outputs": [],
       "source": [
@@ -242,7 +208,15 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "cC4g9vFgyqSa"
+        "dotnet_interactive": {
+          "language": "csharp"
+        },
+        "polyglot_notebook": {
+          "kernelName": "csharp"
+        },
+        "vscode": {
+          "languageId": "polyglot-notebook"
+        }
       },
       "outputs": [],
       "source": [
@@ -255,7 +229,15 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "fauNaJMbytqk"
+        "dotnet_interactive": {
+          "language": "csharp"
+        },
+        "polyglot_notebook": {
+          "kernelName": "csharp"
+        },
+        "vscode": {
+          "languageId": "polyglot-notebook"
+        }
       },
       "outputs": [],
       "source": [
@@ -267,11 +249,15 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
+        "dotnet_interactive": {
+          "language": "csharp"
         },
-        "id": "DUvzQ37JzP6e",
-        "outputId": "a52cb568-4bf3-4935-b5b7-22759cb0adad"
+        "polyglot_notebook": {
+          "kernelName": "csharp"
+        },
+        "vscode": {
+          "languageId": "polyglot-notebook"
+        }
       },
       "outputs": [],
       "source": [
@@ -291,7 +277,15 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "2XTRA4IgzmIN"
+        "dotnet_interactive": {
+          "language": "csharp"
+        },
+        "polyglot_notebook": {
+          "kernelName": "csharp"
+        },
+        "vscode": {
+          "languageId": "polyglot-notebook"
+        }
       },
       "outputs": [],
       "source": [
@@ -309,12 +303,15 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 71
+        "dotnet_interactive": {
+          "language": "csharp"
         },
-        "id": "IX0AbaAT1CpO",
-        "outputId": "161e964a-fce2-4a26-e31e-2a093ac7a01b"
+        "polyglot_notebook": {
+          "kernelName": "csharp"
+        },
+        "vscode": {
+          "languageId": "polyglot-notebook"
+        }
       },
       "outputs": [],
       "source": [
@@ -325,7 +322,15 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "ib-dU07u1EL_"
+        "dotnet_interactive": {
+          "language": "csharp"
+        },
+        "polyglot_notebook": {
+          "kernelName": "csharp"
+        },
+        "vscode": {
+          "languageId": "polyglot-notebook"
+        }
       },
       "outputs": [],
       "source": []
